# metrix

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: CI.yml
examples/: demo_run.rs  instantiate.rs  panel.rs
src/: attached_mount.rs  cockpit.rs  driver.rs  instruments.rs  lib.rs  observation.rs  processor.rs  snapshot.rs  telemetry_receiver.rs  util.rs
src/instruments/: counter.rs  gauge.rs  histogram.rs  instrument_adapter.rs  jemalloc.rs  label_filter.rs  meter.rs  mod.rs  panel.rs  polled.rs
src/instruments/fundamentals/: buckets.rs  clock.rs  metrics_meter.rs  mod.rs
src/instruments/gauge/: gauge_adapter.rs  mod.rs  test.rs  tracking.rs
src/instruments/other_instruments/: display.rs  inc_dec_gauge.rs  last_occurrence_tracker.rs  mod.rs  multi_meter.rs  value_meter.rs
src/instruments/other_instruments/fundamentals/: buckets.rs  mod.rs
src/instruments/switches/: flag.rs  mod.rs  non_occurance_indicator.rs  non_occurrence_indicator.rs  occurance_indicator.rs  occurrence_indicator.rs  staircase_timer.rs
