[package]
version = "0.13.2"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
description = "metrics for application monitoring"
documentation = "https://docs.rs/metrix"
homepage = "https://github.com/chridou/metrix"
keywords = ["metrics", "monitoring", "alerting"]
license = "Apache-2.0/MIT"
name = "metrix"
readme = "README.md"
repository = "https://github.com/chridou/metrix"
edition="2018"

[badges]
[badges.travis-ci]
branch = "master"
repository = "chridou/metrix"

[dependencies]
crossbeam-channel = "0.4"
exponential-decay-histogram = "0.1"
futures = { package = "futures", version = "0.3", optional = true }
futures01 = { package = "futures", version = "0.1", optional = true }
jemalloc-ctl = { version = "0.3.3", optional = true }
json = "0.12"
log = { version = "0.4", optional = true }
